mlflow/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-server-deployment
  namespace: cjarcau
  labels:
    app: mlflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
      - name: mlflow
        image: scr4pp/mlflow_server
        ports:
        - name: mflow-port
          containerPort: 5000
        imagePullPolicy: IfNotPresent
